@@ -56,6 +56,12 @@ specifier|final
 name|RateLimiter
 name|rateLimiter
 decl_stmt|;
+comment|/** How many bytes we've written since we last called rateLimiter.pause. */
+DECL|field|bytesSinceLastPause
+specifier|private
+name|long
+name|bytesSinceLastPause
+decl_stmt|;
 DECL|method|RateLimitedIndexOutput
 name|RateLimitedIndexOutput
 parameter_list|(
@@ -130,13 +136,32 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|bytesSinceLastPause
+operator|+=
+name|len
+expr_stmt|;
+if|if
+condition|(
+name|bytesSinceLastPause
+operator|>
+name|rateLimiter
+operator|.
+name|getMinPauseCheckBytes
+argument_list|()
+condition|)
+block|{
 name|rateLimiter
 operator|.
 name|pause
 argument_list|(
-name|len
+name|bytesSinceLastPause
 argument_list|)
 expr_stmt|;
+name|bytesSinceLastPause
+operator|=
+literal|0
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|bufferedDelegate
